@@ -8,4 +8,4 @@
     SPDX-License-Identifier: GPL-3.0-only
     See LICENSES/GPL-3.0-only for more information.
 """
-__all__ = ['constants', 'strings', 'menu_items', 'converter', 'common', 'tccleaner', 'utils']
+__all__ = ['constants', 'strings', 'menu_items', 'converter', 'common', 'utils']
