@@ -20,7 +20,6 @@ def route():
     use_history = history_size > 0
     if use_history:
         context_menu = list()
-        context_menu.extend(menu_items.clear_previews())
         context_menu.extend(menu_items.clear_search_history('streams', do_refresh=False))
         kodi.create_item({'label': i18n('streams'), 'path': {'mode': MODES.LISTSEARCH, 'content': 'streams'}, 'context_menu': context_menu,
                           'info': {'plot': '%s - %s' % (i18n('search'), i18n('streams'))}})
@@ -38,7 +37,6 @@ def route():
                           'info': {'plot': '%s - %s[CR]%s' % (i18n('search'), i18n('video_id_url'), i18n('search_id_url_description'))}})
     else:
         context_menu = list()
-        context_menu.extend(menu_items.clear_previews())
         kodi.create_item({'label': i18n('streams'), 'path': {'mode': MODES.NEWSEARCH, 'content': 'streams'}, 'context_menu': context_menu,
                           'info': {'plot': '%s - %s' % (i18n('search'), i18n('streams'))}})
         kodi.create_item({'label': i18n('channels'), 'path': {'mode': MODES.NEWSEARCH, 'content': 'channels'},
