@@ -17,8 +17,6 @@ from ..addon.utils import i18n
 def route(content):
     kodi.set_view('files', set_sort=False)
     context_menu = list()
-    if content == 'streams':
-        context_menu.extend(menu_items.clear_previews())
     context_menu.extend(menu_items.clear_search_history(content, do_refresh=True))
     kodi.create_item({'label': '[B]%s[/B]' % i18n('new_search'), 'path': {'mode': MODES.NEWSEARCH, 'content': content},
                       'info': {'plot': i18n('new_search')}, 'context_menu': context_menu})
@@ -29,8 +27,6 @@ def route(content):
     if len(history_items) > 0:
         for item in history_items:
             context_menu = list()
-            if content == 'streams':
-                context_menu.extend(menu_items.clear_previews())
             context_menu.extend(menu_items.clear_search_history(content, do_refresh=True))
             context_menu.extend(menu_items.remove_search_history(content, item, do_refresh=True))
             kodi.create_item({'label': item, 'path': {'mode': MODES.SEARCHRESULTS, 'content': content, 'query': item},
