@@ -52,6 +52,9 @@
 
         <setting id="thumbnail_size" type="enum" label="30255" lvalues="30102|30256|30257|30258" default="2"/>
 
+        <!-- Live preview refresh interval -->
+        <setting label="30259" type="slider" id="refresh_interval" default="10" range="0,1,180" option="int"/>
+
         <setting id="vodcast_highlight" type="enum" label="30222" values="aliceblue|antiquewhite|aqua|aquamarine|azure|beige|bisque|black|blanchedalmond|blue|blueviolet|brown|burlywood|cadetblue|chartreuse|chocolate|coral|cornflowerblue|cornsilk|crimson|cyan|darkblue|darkcyan|darkgoldenrod|darkgray|darkgreen|darkkhaki|darkmagenta|darkolivegreen|darkorange|darkorchid|darkred|darksalmon|darkseagreen|darkslateblue|darkslategray|darkturquoise|darkviolet|deeppink|deepskyblue|dimgray|dodgerblue|firebrick|floralwhite|forestgreen|fuchsia|gainsboro|ghostwhite|gold|goldenrod|gray|green|greenyellow|honeydew|hotpink|indianred|indigo|ivory|khaki|lavender|lavenderblush|lawngreen|lemonchiffon|lightblue|lightcoral|lightcyan|lightgoldenrodyellow|lightgrey|lightgreen|lightpink|lightsalmon|lightseagreen|lightskyblue|lightslategray|lightsteelblue|lightyellow|lime|limegreen|linen|magenta|maroon|mediumaquamarine|mediumblue|mediumorchid|mediumpurple|mediumseagreen|mediumslateblue|mediumspringgreen|mediumturquoise|mediumvioletred|midnightblue|mintcream|mistyrose|moccasin|navajowhite|navy|none|oldlace|olive|olivedrab|orange|orangered|orchid|palegoldenrod|palegreen|paleturquoise|palevioletred|papayawhip|peachpuff|peru|pink|plum|powderblue|purple|red|rosybrown|royalblue|saddlebrown|salmon|sandybrown|seagreen|seashell|sienna|silver|skyblue|slateblue|slategray|snow|springgreen|steelblue|tan|teal|thistle|tomato|turquoise|violet|wheat|white|whitesmoke|yellow|yellowgreen" default="79"/>
 
         <setting label="30123" type="slider" id="items_per_page" default="25" range="10,100" option="int"/>
@@ -98,27 +101,6 @@
         <setting id="irc_enable" type="bool" label="30052" default="false" enable="System.HasAddon(script.ircchat)"/>
         <setting label="30075" id="install_ircscript" type="action" action="RunPlugin(plugin://$ID/?mode=install_ircchat)"
                  enable="!System.HasAddon(script.ircchat)" visible="!System.HasAddon(script.ircchat)" option="close"/>
-    </category>
-    <!-- Live Previews -->
-    <category label="30082">
-        <!-- Live Preview Settings -->
-        <setting id="live_previews_enable" type="bool" label="30083" default="false"/>
-        <!-- Live Preview Settings WARNING LABELS -->
-        <setting label="30085" type="lsep" enable="eq(-1,false)" visible="eq(-1,false)"/>
-        <setting label="30086" type="lsep" enable="eq(-2,false)" visible="eq(-2,false)"/>
-        <!-- Remove Live Previews -->
-        <setting id="clear_previews" label="30084" type="action"
-                 action="RunPlugin(plugin://$ID/?mode=clear_live_previews&amp;notify=true)"
-                 enable="eq(-3,true)" visible="eq(-3,true)"/>
-        <!-- Automaticall Refresh Live Previews -->
-        <setting id="refresh_previews" type="bool" label="30074" default="false"
-                 enable="eq(-4,true)" visible="eq(-4,true)"/>
-        <!-- Automatic refresh interval -->
-        <setting label="30094" type="slider" id="refresh_interval" default="10" range="0,1,180" option="int"
-                 enable="eq(-1,true)" visible="eq(-1,true)"/>
-        <!-- Notifications when refreshing -->
-        <setting id="notify_refresh" type="bool" label="30087" default="true"
-                 enable="eq(-6,true)" visible="eq(-6,true)"/>
     </category>
     <!-- Maintenance -->
     <category label="30243">
